--- a/Examples/Lorem Ipsum Mac OS X Example/en.lproj/MainMenu.xib
+++ b/Examples/Lorem Ipsum Mac OS X Example/en.lproj/MainMenu.xib
@@ -1309,10 +1309,12 @@
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMinSize">{425, 365}</string>
 				<object class="NSView" key="NSWindowView" id="439893737">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews"/>
 					<string key="NSFrameSize">{425, 365}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
 				<string key="NSMinSize">{425, 387}</string>
@@ -1325,7 +1327,7 @@
 			<object class="NSViewController" id="90832025"/>
 			<object class="NSViewController" id="969157443"/>
 			<object class="NSCustomView" id="462480331">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="NSTextField" id="40011519">
@@ -1333,6 +1335,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{150, 49}, {125, 17}}</string>
 						<reference key="NSSuperview" ref="462480331"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="933086006"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
@@ -1373,6 +1376,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{128, 13}, {168, 32}}</string>
 						<reference key="NSSuperview" ref="462480331"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="752598454">
@@ -1404,6 +1408,7 @@
 						</set>
 						<string key="NSFrame">{{20, 84}, {385, 270}}</string>
 						<reference key="NSSuperview" ref="462480331"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="40011519"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -1421,6 +1426,8 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{425, 374}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="37891833"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="NSClassName">NSView</string>
@@ -2062,14 +2069,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">window</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="972006081"/>
-					</object>
-					<int key="connectionID">532</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">imagesViewController</string>
 						<reference key="source" ref="976324537"/>
 						<reference key="destination" ref="90832025"/>
@@ -2083,22 +2082,6 @@
 						<reference key="destination" ref="969157443"/>
 					</object>
 					<int key="connectionID">630</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">imageView</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="37891833"/>
-					</object>
-					<int key="connectionID">574</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">informationLabel</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="40011519"/>
-					</object>
-					<int key="connectionID">607</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -3566,26 +3549,21 @@
 					<string key="superclassName">NSObject</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="imagesViewController">ImagesViewController</string>
+						<string key="mainView">NSView</string>
 						<string key="textsViewController">TextsViewController</string>
-						<string key="view">NSView</string>
-						<string key="window">NSWindow</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="imagesViewController">
 							<string key="name">imagesViewController</string>
 							<string key="candidateClassName">ImagesViewController</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="mainView">
+							<string key="name">mainView</string>
+							<string key="candidateClassName">NSView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="textsViewController">
 							<string key="name">textsViewController</string>
 							<string key="candidateClassName">TextsViewController</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="view">
-							<string key="name">view</string>
-							<string key="candidateClassName">NSView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="window">
-							<string key="name">window</string>
-							<string key="candidateClassName">NSWindow</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -3637,6 +3615,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">TextsViewController</string>
 					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">loadText:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">loadText:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">loadText:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/TextsViewController.h</string>
