--- a/Examples/Lorem Ipsum iOS Example/en.lproj/ViewController.xib
+++ b/Examples/Lorem Ipsum iOS Example/en.lproj/ViewController.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment version="2048" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14270.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
             <connections>
+                <outlet property="activityIndicator" destination="4Lc-cd-61E" id="1Ha-Uw-Awe"/>
+                <outlet property="button" destination="8" id="APA-ya-dK7"/>
                 <outlet property="imageView" destination="14" id="34"/>
                 <outlet property="informationLabel" destination="11" id="35"/>
                 <outlet property="view" destination="6" id="7"/>
@@ -22,9 +22,9 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8">
-                    <rect key="frame" x="113.5" y="617" width="148" height="30"/>
+                    <rect key="frame" x="145" y="617" width="85" height="30"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" title="Load Another Image">
+                    <state key="normal" title="Load Image">
                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <state key="highlighted">
@@ -43,6 +43,9 @@
                 <imageView userInteractionEnabled="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="14">
                     <rect key="frame" x="20" y="20" width="335" height="557"/>
                 </imageView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="4Lc-cd-61E">
+                    <rect key="frame" x="169" y="280" width="37" height="37"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -54,7 +57,10 @@
                 <constraint firstAttribute="trailing" secondItem="14" secondAttribute="trailing" constant="20" symbolic="YES" id="22"/>
                 <constraint firstAttribute="centerX" secondItem="11" secondAttribute="centerX" id="41"/>
                 <constraint firstAttribute="centerX" secondItem="8" secondAttribute="centerX" id="43"/>
+                <constraint firstItem="4Lc-cd-61E" firstAttribute="centerY" secondItem="14" secondAttribute="centerY" id="VcF-Vp-s57"/>
+                <constraint firstItem="4Lc-cd-61E" firstAttribute="centerX" secondItem="14" secondAttribute="centerX" id="ZfS-7g-ell"/>
             </constraints>
+            <point key="canvasLocation" x="138" y="153"/>
         </view>
     </objects>
 </document>
